--- a/Data.html
+++ b/Data.html
@@ -42,12 +42,11 @@
           <li class="nav-item">
             <a class="nav-link" href="data.html">Data</a>
           </li>
-
         </ul>
       </div>
     </nav>
   </div>
-  <!-- Content Section -->
+  <!-- Content -->
   <div class="container">
     <div class="box">
       <h3 class="title">Data</h3>
