--- a/comparisons.html
+++ b/comparisons.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
 
-    <head>
+  <head>
 
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
-        <title>Bootstrap Visualization Dashboard</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    </head>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css" media="screen">
+  
+    <title>Bootstrap Visualization Dashboard</title>
+
+  </head>
     
 
 <body>
@@ -41,12 +44,11 @@
           <li class="nav-item">
             <a class="nav-link" href="data.html">Data</a>
           </li>
-
         </ul>
       </div>
     </nav>
   </div>
-  <!-- Content Section -->
+  <!-- Content -->
   <div class="container">
     <div class="row">
       <div>
